Adds fix for swagger doc
