# cmd/api/handlers/get.go
@@ -8,8 +8,9 @@ import (
 // swagger:route GET /products products listProducts
 // Return a list of products from the database
 // responses:
-//	200: productsResponse
-
+//
+//	200: productResponse
+//
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
