# swagger.yaml
@@ -1,40 +1,3 @@
-definitions:
-    Product:
-        description: Product defines the structure for an API product
-        properties:
-            description:
-                description: the description for this poduct
-                maxLength: 10000
-                type: string
-                x-go-name: Description
-            id:
-                description: the id for the product
-                format: int64
-                minimum: 1
-                type: integer
-                x-go-name: ID
-            name:
-                description: the name for this poduct
-                maxLength: 255
-                type: string
-                x-go-name: Name
-            price:
-                description: the price for the product
-                format: float
-                minimum: 0.01
-                type: number
-                x-go-name: Price
-            sku:
-                description: the SKU for the product
-                pattern: '[a-z]+-[a-z]+-[a-z]+'
-                type: string
-                x-go-name: SKU
-        required:
-            - name
-            - price
-            - sku
-        type: object
-        x-go-package: github.com/notoriouscode97/cmd/api/data
 paths:
     /products:
         get:
@@ -42,7 +5,7 @@ paths:
             operationId: listProducts
             responses:
                 "200":
-                    $ref: '#/responses/productsResponse'
+                    $ref: '#/responses/productResponse'
             tags:
                 - products
         post:
@@ -92,4 +55,51 @@ paths:
                     $ref: '#/responses/errorResponse'
             tags:
                 - products
+responses:
+    errorResponse:
+        description: ""
+    errorValidation:
+        description: ""
+    noContentResponse:
+        description: ""
+    productResponse:
+        description: Product defines the structure for an API product
+        headers:
+            description:
+                description: |-
+                    the description for this poduct
+
+                    required: false
+                maxLength: 10000
+                type: string
+            id:
+                description: |-
+                    the id for the product
+
+                    required: false
+                format: int64
+                minimum: 1
+                type: integer
+            name:
+                description: |-
+                    the name for this poduct
+
+                    required: true
+                maxLength: 255
+                type: string
+            price:
+                description: |-
+                    the price for the product
+
+                    required: true
+                format: float
+                minimum: 0.01
+                type: number
+            sku:
+                description: |-
+                    the SKU for the product
+
+                    required: true
+                pattern: '[a-z]+-[a-z]+-[a-z]+'
+                type: string
 swagger: "2.0"
